# MagTense

./: .gitignore  Doxyfile  IterateMagnetization_mex.mexw64  LibraryDescription.txt  MagTense.sln  MagTenseLandauLifshitzSolver_mex.exp  MagTenseLandauLifshitzSolver_mex.lib  Makefile  README.md  README_paths.txt  Todo_before_publication.txt  buildEllipticIncomplete_mex.m  buildIntegral2_mex.m  buildIterateMagnetization_mex.m  buildMagForce.m  buildMagStatPrism.m  buildMagStatPrism2_ALL.m  buildMagStatPrismGetSolution.m  buildMagStatPrism_debug.m  buildMagTenseMEX.asv  buildMagTenseMEX.m  buildMagTenseMEX_linux.m  buildTileDemagTensor_mex.m  buildetFieldFromTiles_mex.m  buildgetNFromCylTile_mex.m  getHFromTiles_mex.mexw64  getMagForce_mex.mexw64  getNFromCylTile_mex.mexw64  getNFromTile_mex.mexw64  mex_commad_linux.txt  readme_CUDA  readme_CUDA.txt  readme_CUDA_sparse_hack.txt
python/: .gitignore  MANIFEST.in  MagTenseStandalone.py  README.md  build_env_linux.yml  environment_linux.yml  environment_win.yml  pyproject.toml  requirements-dev.txt  setup.py
python/.build/: dist_pypi.py  env-312-linux.yml  env-313-linux.yml  requirements-312-cpu.txt  requirements-312-cu12.txt  requirements-312-dev.txt  requirements-313-cpu.txt  requirements-313-cu12.txt  requirements-py3-cu12.txt
python/documentation/: environment.yml  requirements.txt
python/examples/: README.md  basic_geometries.py  cylinder.py  database.py  db_utils.py  four_prism_tiles.py  halbach_magnet.py  prisms_3D.py  spheroid.py  validation_circpiece.py  validation_circpiece_inv.py  validation_cylinder.py  (+4 more)
(+997 files in other folders)
